--- a/index.html
+++ b/index.html
@@ -384,26 +384,26 @@
                 <div class="fw-bold" style="color: hsl(180, 29%, 50%);;">Eyecam Co.</div>
                  
               </div>
-              <div class="fw-bold my-2">Senior Frontend Developer</div>
+              <div class="fw-bold my-2">Full Stack Engineer</div>
               <div class="d-flex">
-                <div>1d ago</div>
+                <div>3w ago</div>
                 <div class="ms-3">Full Time</div>
-                <div class="ms-3">USA only</div>
+                <div class="ms-3">Worldwide</div>
               </div>
             </div>
           </div>
         </div>
         <div class="col-6   align-items-center d-flex justify-content-end">
           <!-- Role -->
-          <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ;" >Frontend</div>
+          <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ;" >Fullstack</div>
 
           <!-- Level -->
-          <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ">Senior</div>
+          <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ">Midweight</div>
 
           <!-- Languages -->
-          <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ;" >HTML</div>
-          <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ;">CSS</div>
-          <div class="me-5 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ;">JavaScript</div>
+          <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ;" >JavaScript</div>
+          <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ;">Django</div>
+          <div class="me-5 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ;">Python</div>
 
           <!-- Item End -->
         </div>
@@ -439,11 +439,11 @@
           <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ;" >Frontend</div>
 
           <!-- Level -->
-          <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ">Senior</div>
+          <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ">Junior</div>
 
           <!-- Languages -->
-          <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ;" >HTML</div>
-          <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ;">CSS</div>
+          <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ;" >React</div>
+          <div class="me-3 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ;">Sass</div>
           <div class="me-5 px-2" style="background-color:hsl(180, 31%, 95%); color: hsl(180, 29%, 50%); ;">JavaScript</div>
 
           <!-- Item End -->
