--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     .job-box {
       box-sizing: content-box;
       background-color: white;
-      margin-left: 40px;
-      margin-right: 40px;
+      /* margin-left: 40px;
+      margin-right: 40px; */
 
     
       border-radius: 4px;
@@ -152,7 +152,7 @@
     <img src="images/bg-header-mobile.svg" width="100%" height="130px" alt="" />
   </div>
 
-  <div class="job-box mt-5 mt-md-4  position-relative">
+  <div class="job-box mt-5 mt-md-4  position-relative  mx-3 mx-sm-5">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -231,7 +231,7 @@
     </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4  position-relative">
+  <div class="job-box mt-5 mt-md-4  mx-3 mx-sm-5  position-relative">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -300,7 +300,7 @@
       </div>
     </div>
   </div>
-  <div class="job-box  mt-5 mt-md-4   position-relative">
+  <div class="job-box  mt-5 mt-md-4   position-relative mx-3 mx-sm-5 ">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -373,7 +373,7 @@
     </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4  position-relative">
+  <div class="job-box mt-5 mt-md-4  mx-3 mx-sm-5 position-relative">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -404,7 +404,7 @@
 
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
@@ -439,7 +439,7 @@
     </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4  position-relative ">
+  <div class="job-box mt-5 mt-md-4 mx-3 mx-sm-5 position-relative ">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -469,7 +469,7 @@
       </div>
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
@@ -477,27 +477,27 @@
         </div>
 
         <!-- Level -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%);
             ">
           Midweight
         </div>
 
-        <!-- Languages -->
-        <div class="me-3 px-2" style="
+        <!-- Languages --> 
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           JavaScript
         </div>
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0 " style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Sass
         </div>
-        <div class="me-5 px-2" style="
+        <div class="me-5 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
@@ -509,7 +509,7 @@
     </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4  position-relative">
+  <div class="job-box mt-5 mt-md-4 mx-3 mx-sm-5 position-relative">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -574,7 +574,7 @@
     </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4  position-relative">
+  <div class="job-box mt-5 mt-md-4 mx-3 mx-sm-5  position-relative">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -604,7 +604,7 @@
       </div>
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
@@ -612,7 +612,7 @@
         </div>
 
         <!-- Level -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%);
             ">
@@ -620,19 +620,19 @@
         </div>
 
         <!-- Languages -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           HTML
         </div>
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Sass
         </div>
-        <div class="me-5 px-2" style="
+        <div class="me-5 px-2 mb-2 mb-md-0 " style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
@@ -644,7 +644,7 @@
     </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4  position-relative">
+  <div class="job-box mt-5 mt-md-4 mx-3 mx-sm-5 position-relative">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -674,7 +674,7 @@
       </div>
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0 " style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
@@ -682,7 +682,7 @@
         </div>
 
         <!-- Level -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0 " style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%);
             ">
@@ -690,19 +690,19 @@
         </div>
 
         <!-- Languages -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0 " style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Vue
         </div>
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0 " style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           JavaScript
         </div>
-        <div class="me-5 px-2" style="
+        <div class="me-5 px-2 mb-2 mb-md-0 " style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
@@ -714,7 +714,7 @@
     </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4 position-relative ">
+  <div class="job-box mt-5 mt-md-4  mx-3 mx-sm-5 position-relative ">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -744,7 +744,7 @@
       </div>
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
@@ -752,7 +752,7 @@
         </div>
 
         <!-- Level -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%);
             ">
@@ -760,19 +760,19 @@
         </div>
 
         <!-- Languages -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           JavaScript
         </div>
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Django
         </div>
-        <div class="me-5 px-2" style="
+        <div class="me-5 px-2 mb-2 mb-md-0 " style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
@@ -784,7 +784,7 @@
     </div>
   </div>
 
-  <div class="job-box mb-3 mt-5 mt-md-4  position-relative">
+  <div class="job-box mb-3 mt-5 mt-md-4 mx-3 mx-sm-5 position-relative">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -814,7 +814,7 @@
       </div>
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0 " style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
@@ -822,7 +822,7 @@
         </div>
 
         <!-- Level -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%);
             ">
@@ -830,19 +830,19 @@
         </div>
 
         <!-- Languages -->
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           React
         </div>
-        <div class="me-3 px-2" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Sass
         </div>
-        <div class="me-5 px-2" style="
+        <div class="me-5 px-2 mb-2 mb-md-0 "  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
@@ -854,7 +854,7 @@
     </div>
   </div>
 
-  <div class="attribution mb-3">
+  <div class="attribution mb-3 mx-3 mx-sm-5 ">
     Challenge by
     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
       href="#">Mahmoud Farahat Eldesoky</a>.
