--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
       
       width: 1175px;
     }
+
+    .filter-style{
+      background-color: hsl(180, 31%, 95%);
+              color: hsl(180, 29%, 50%); ;
+    }
   </style>
 </head>
 
@@ -73,8 +78,13 @@
 
   <div class="position-relative mb-5">
     <img src="images/bg-header-mobile.svg" width="100%" height="130px" alt="" />
-    <input value="dff" type="text" id="filertinput" class=" position-absolute top-100 start-50 translate-middle form-control filter-input " width=""> 
-     
+    <input value="" type="text" id="filertinput" class="  mt-4  position-absolute top-100 start-50 translate-middle form-control filter-input " width=""> 
+     <div class="d-flex bg-white" style="width: 550px; height: 50px;"
+      id="myInput">
+
+kk
+
+     </div>
   </div>
 
   <div class="job-box mt-5 mt-md-4  position-relative  mx-3 mx-sm-5">
@@ -193,12 +203,12 @@
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2  ">
         <!-- Role -->
         <!-- Level -->
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <a  class=" btn me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
-              color: hsl(180, 29%, 50%);
-            ">
+              color: hsl(180, 29%, 50%); 
+            " data-nav="Fullstack" >
           Fullstack
-        </div>
+        </a>
 
         <!-- Languages -->
         <div class="me-3 px-2 mb-2 mb-md-0" style="
@@ -259,10 +269,10 @@
         <!-- Role -->
 
         <!-- Level -->
-        <div class="me-3 px-2 mb-2 mb-md-0 " style="
+        <div class="btn me-3 px-2 mb-2 mb-md-0 " style="
               background-color: hsl(180, 31%, 95%);
-              color: hsl(180, 29%, 50%);
-            ">
+              color: hsl(180, 29%, 50%); 
+            " data-nav="Frontend"  >
           Frontend
         </div>
 
