--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
     .filter-style{
       background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
+              
+    }
+
+    .filter-div{
+width: 1200px; 
+height: 60px;
+margin: 0 auto;
     }
   </style>
 </head>
@@ -78,11 +85,11 @@
 
   <div class="position-relative mb-5">
     <img src="images/bg-header-mobile.svg" width="100%" height="130px" alt="" />
-    <input value="" type="text" id="filertinput" class="  mt-4  position-absolute top-100 start-50 translate-middle form-control filter-input " width=""> 
-     <div class="d-flex bg-white" style="width: 550px; height: 50px;"
+    <!-- <input value="" type="text" id="filertinput" class="  mt-4  position-absolute top-100 start-50 translate-middle form-control filter-input " width="">  -->
+     <div class="    position-absolute top-100 start-50 translate-middle form-control d-flex bg-white filter-div"   
       id="myInput">
 
-kk
+ 
 
      </div>
   </div>
