--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ margin: 0 auto;
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2  ">
         <!-- Role -->
         <!-- Level -->
-        <a  class=" btn me-3 px-2 mb-2 mb-md-0" style="
+        <a  class=" btn me-3 px-2 mb-2 mb-md-0" data-nav="Fullstack"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); 
             " data-nav="Fullstack" >
@@ -218,19 +218,19 @@ margin: 0 auto;
         </a>
 
         <!-- Languages -->
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" data-nav="Midweight" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Midweight
         </div>
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <div class="me-3 px-2 mb-2 mb-md-0" data-nav="Python" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Python
         </div>
-        <div class="me-5 px-2 mb-2 mb-md-0" style="
+        <div class="me-5 px-2 mb-2 mb-md-0"  data-nav="React" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
@@ -276,7 +276,7 @@ margin: 0 auto;
         <!-- Role -->
 
         <!-- Level -->
-        <div class="btn me-3 px-2 mb-2 mb-md-0 " style="
+        <div class="btn me-3 px-2 mb-2 mb-md-0 " data-nav="Frontend" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); 
             " data-nav="Frontend"  >
@@ -284,30 +284,30 @@ margin: 0 auto;
         </div>
 
         <!-- Languages -->
-        <div class="me-3 px-2 mb-2 mb-md-0 " style="
+        <a class="btn me-3 px-2 mb-2 mb-md-0 " data-nav="Junior"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Junior
-        </div>
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        </a>
+        <a class="btn me-3 px-2 mb-2 mb-md-0" data-nav="React"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           React
-        </div>
-        <div class="me-3 px-2 mb-2 mb-md-0 " style="
+        </a>
+        <a class="btn me-3 px-2 mb-2 mb-md-0 " data-nav="Sass" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Sass
-        </div>
-        <div class="me-5 px-2 mb-2 mb-md-0 " style="
+        </a>
+        <a class="btn me-5 px-2 mb-2 mb-md-0 " data-nav="JavaScript"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           JavaScript
-        </div>
+        </a>
 
         <!-- Item End -->
       </div>
@@ -345,35 +345,35 @@ margin: 0 auto;
 
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <a class="btn me-3 px-2 mb-2 mb-md-0" data-nav="Frontend"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Frontend
-        </div>
+        </a>
 
         <!-- Level -->
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <a class="btn me-3 px-2 mb-2 mb-md-0"  data-nav="Junior" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%);
             ">
           Junior
-        </div>
+        </a>
 
         <!-- Languages -->
 
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <a class=" btn me-3 px-2 mb-2 mb-md-0" data-nav="CSS" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           CSS
-        </div>
-        <div class="me-5 px-2 mb-2 mb-md-0" style="
+        </a>
+        <a class="btn me-5 px-2 mb-2 mb-md-0"  data-nav="JavaScript" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           JavaScript
-        </div>
+        </a>
 
         <!-- Item End -->
       </div>
@@ -410,7 +410,7 @@ margin: 0 auto;
       </div>
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <div class=" btn me-3 px-2 mb-2 mb-md-0" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
@@ -418,32 +418,32 @@ margin: 0 auto;
         </div>
 
         <!-- Level -->
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <a class=" btn me-3 px-2 mb-2 mb-md-0"   data-nav="Midweight" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%);
             ">
           Midweight
-        </div>
+        </a>
 
         <!-- Languages --> 
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <a class=" btn me-3 px-2 mb-2 mb-md-0"   data-nav="JavaScript" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           JavaScript
-        </div>
-        <div class="me-3 px-2 mb-2 mb-md-0 " style="
+        </a>
+        <a class="btn me-3 px-2 mb-2 mb-md-0 "  data-nav="Sass"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Sass
-        </div>
-        <div class="me-5 px-2 mb-2 mb-md-0" style="
+        </a>
+        <a class="btn me-5 px-2 mb-2 mb-md-0"  data-nav="Ruby"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Ruby
-        </div>
+        </a>
 
         <!-- Item End -->
       </div>
@@ -480,35 +480,35 @@ margin: 0 auto;
       </div>
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <div class="me-3 px-2" style="
+        <a class="btn me-3 px-2" data-nav="Backend" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Backend
-        </div>
+        </a>
 
         <!-- Level -->
-        <div class="me-3 px-2" style="
+        <a class="btn me-3 px-2" data-nav="Junior"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%);
             ">
           Junior
-        </div>
+        </a>
 
         <!-- Languages -->
-        <div class="me-3 px-2" style="
+        <a class=" btn me-3 px-2"  data-nav="Ruby" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Ruby
-        </div>
+        </a>
 
-        <div class="me-5 px-2" style="
+        <a class=" btn me-5 px-2"  data-nav="RoR"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           RoR
-        </div>
+        </a>
 
         <!-- Item End -->
       </div>
@@ -545,40 +545,40 @@ margin: 0 auto;
       </div>
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <a class="btn me-3 px-2 mb-2 mb-md-0"  data-nav="Frontend"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Frontend
-        </div>
+        </a>
 
         <!-- Level -->
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <a class=" btn me-3 px-2 mb-2 mb-md-0"  data-nav="Junior"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%);
             ">
           Junior
-        </div>
+        </a>
 
         <!-- Languages -->
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <a class="btn me-3 px-2 mb-2 mb-md-0" data-nav="HTML"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           HTML
-        </div>
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        </a>
+        <a class=" btn me-3 px-2 mb-2 mb-md-0"  data-nav="Sass" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Sass
-        </div>
-        <div class="me-5 px-2 mb-2 mb-md-0 " style="
+        </a>
+        <a class=" btn me-5 px-2 mb-2 mb-md-0 "  data-nav="JavaScript" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           JavaScript
-        </div>
+        </a>
 
         <!-- Item End -->
       </div>
@@ -615,40 +615,40 @@ margin: 0 auto;
       </div>
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <div class="me-3 px-2 mb-2 mb-md-0 " style="
+        <a class="btn   me-3 px-2 mb-2 mb-md-0 " data-nav="Midweight" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Frontend
-        </div>
+        </a>
 
         <!-- Level -->
-        <div class="me-3 px-2 mb-2 mb-md-0 " style="
+        <a class="btn me-3 px-2 mb-2 mb-md-0 " data-nav="Midweight" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%);
             ">
           Junior
-        </div>
+        </a>
 
         <!-- Languages -->
-        <div class="me-3 px-2 mb-2 mb-md-0 " style="
+        <a class="btn me-3 px-2 mb-2 mb-md-0 " data-nav="Midweight"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Vue
-        </div>
-        <div class="me-3 px-2 mb-2 mb-md-0 " style="
+        </a>
+        <a class=" btn me-3 px-2 mb-2 mb-md-0 " data-nav="Midweight"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           JavaScript
-        </div>
-        <div class="me-5 px-2 mb-2 mb-md-0 " style="
+        </a>
+        <a class="btn me-5 px-2 mb-2 mb-md-0 " data-nav="Midweight"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Sass
-        </div>
+        </a>
 
         <!-- Item End -->
       </div>
@@ -685,40 +685,40 @@ margin: 0 auto;
       </div>
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <a class=" btn me-3 px-2 mb-2 mb-md-0" data-nav="Fullstack" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Fullstack
-        </div>
+        </a>
 
         <!-- Level -->
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <a class=" btn me-3 px-2 mb-2 mb-md-0" data-nav="Midweight"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%);
             ">
           Midweight
-        </div>
+        </a>
 
         <!-- Languages -->
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <a class=" btn me-3 px-2 mb-2 mb-md-0"  data-nav="JavaScript" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           JavaScript
-        </div>
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        </a>
+        <a class=" btn me-3 px-2 mb-2 mb-md-0" data-nav="Django" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Django
-        </div>
-        <div class="me-5 px-2 mb-2 mb-md-0 " style="
+        </a>
+        <a class=" btn me-5 px-2 mb-2 mb-md-0 " data-nav="Python"  style="
               background-color: hsl(180, 31%, 95%);
-              color: hsl(180, 29%, 50%); ;
+              color: hsl(180, 29%, 50%); ; 
             ">
           Python
-        </div>
+        </a>
 
         <!-- Item End -->
       </div>
@@ -755,40 +755,40 @@ margin: 0 auto;
       </div>
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <div class="me-3 px-2 mb-2 mb-md-0 " style="
+        <a class=" btn me-3 px-2 mb-2 mb-md-0 "  data-nav="Frontend" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Frontend
-        </div>
+        </a>
 
         <!-- Level -->
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <a class=" btn me-3 px-2 mb-2 mb-md-0" data-nav="Junior"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%);
             ">
           Junior
-        </div>
+        </a>
 
         <!-- Languages -->
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        <a class=" btn me-3 px-2 mb-2 mb-md-0" data-nav="React"  style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           React
-        </div>
-        <div class="me-3 px-2 mb-2 mb-md-0" style="
+        </a>
+        <a class=" btn me-3 px-2 mb-2 mb-md-0"  data-nav="Sass" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Sass
-        </div>
-        <div class="me-5 px-2 mb-2 mb-md-0 "  style="
+        </a>
+        <a class="btn me-5 px-2 mb-2 mb-md-0 " data-nav="JavaScript"  style="
               background-color: hsl(180, 31%, 95%);
-              color: hsl(180, 29%, 50%); ;
+              color: hsl(180, 29%, 50%); ; 
             ">
           JavaScript
-        </div>
+        </a>
 
         <!-- Item End -->
       </div>
