--- a/index.html
+++ b/index.html
@@ -218,24 +218,24 @@ margin: 0 auto;
         </a>
 
         <!-- Languages -->
-        <div class="me-3 px-2 mb-2 mb-md-0" data-nav="Midweight" style="
+        <a class="btn me-3 px-2 mb-2 mb-md-0" data-nav="Midweight" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Midweight
-        </div>
-        <div class="me-3 px-2 mb-2 mb-md-0" data-nav="Python" style="
+        </a>
+        <a class="btn me-3 px-2 mb-2 mb-md-0" data-nav="Python" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           Python
-        </div>
-        <div class="me-5 px-2 mb-2 mb-md-0"  data-nav="React" style="
+        </a>
+        <a class="btn me-5 px-2 mb-2 mb-md-0"  data-nav="React" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
           React
-        </div>
+        </a>
 
         <!-- Item End -->
       </div>
@@ -410,7 +410,7 @@ margin: 0 auto;
       </div>
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <div class=" btn me-3 px-2 mb-2 mb-md-0" style="
+        <div class=" btn me-3 px-2 mb-2 mb-md-0"   data-nav="Midweight" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
