--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ margin: 0 auto;
      </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4  position-relative  mx-3 mx-sm-5">
+  <div class="d-none job-box mt-5 mt-md-4  position-relative  mx-3 mx-sm-5">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -172,7 +172,7 @@ margin: 0 auto;
     </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4  mx-3 mx-sm-5  position-relative">
+  <div class="d-none job-box mt-5 mt-md-4  mx-3 mx-sm-5  position-relative">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -241,7 +241,7 @@ margin: 0 auto;
       </div>
     </div>
   </div>
-  <div class="job-box  mt-5 mt-md-4   position-relative mx-3 mx-sm-5 ">
+  <div class=" d-none job-box  mt-5 mt-md-4   position-relative mx-3 mx-sm-5 ">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -314,7 +314,7 @@ margin: 0 auto;
     </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4  mx-3 mx-sm-5 position-relative">
+  <div class=" d-none job-box mt-5 mt-md-4  mx-3 mx-sm-5 position-relative">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -380,7 +380,7 @@ margin: 0 auto;
     </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4 mx-3 mx-sm-5 position-relative ">
+  <div class=" d-none job-box mt-5 mt-md-4 mx-3 mx-sm-5 position-relative ">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -450,7 +450,7 @@ margin: 0 auto;
     </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4 mx-3 mx-sm-5 position-relative">
+  <div class=" d-none job-box mt-5 mt-md-4 mx-3 mx-sm-5 position-relative">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -515,7 +515,7 @@ margin: 0 auto;
     </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4 mx-3 mx-sm-5  position-relative">
+  <div class=" d-none job-box mt-5 mt-md-4 mx-3 mx-sm-5  position-relative">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -585,7 +585,7 @@ margin: 0 auto;
     </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4 mx-3 mx-sm-5 position-relative">
+  <div class=" d-none job-box mt-5 mt-md-4 mx-3 mx-sm-5 position-relative">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -615,7 +615,7 @@ margin: 0 auto;
       </div>
       <div class="col-lg-6 col-sm-12 align-items-center d-flex justify-content-lg-end ms-4 ms-lg-0 flex-wrap mt-2">
         <!-- Role -->
-        <a class="btn   me-3 px-2 mb-2 mb-md-0 " data-nav="Midweight" style="
+        <a class="btn   me-3 px-2 mb-2 mb-md-0 " data-nav="Frontend" style="
               background-color: hsl(180, 31%, 95%);
               color: hsl(180, 29%, 50%); ;
             ">
@@ -655,7 +655,7 @@ margin: 0 auto;
     </div>
   </div>
 
-  <div class="job-box mt-5 mt-md-4  mx-3 mx-sm-5 position-relative ">
+  <div class=" d-none job-box mt-5 mt-md-4  mx-3 mx-sm-5 position-relative ">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
@@ -725,7 +725,7 @@ margin: 0 auto;
     </div>
   </div>
 
-  <div class="job-box mb-3 mt-5 mt-md-4 mx-3 mx-sm-5 position-relative">
+  <div class="d-none job-box mb-3 mt-5 mt-md-4 mx-3 mx-sm-5 position-relative">
     <!-- Item Start -->
     <div class="row">
       <div class="col-lg-6 col-sm-12">
